fixes spacing on trip builder

--- a/client/src/Components/Map/_map.scss
+++ b/client/src/Components/Map/_map.scss
@@ -11,8 +11,6 @@
   display: inline-block;
   width: 100%;
   height: 100vh;
-  margin-bottom: 5vh;
-  background-color: darkgrey;
   text-align: center;
   scroll-snap-align: start;
 
