--- a/client/src/Components/NightOutBuilder/_night-out-builder.scss
+++ b/client/src/Components/NightOutBuilder/_night-out-builder.scss
@@ -1,3 +1,3 @@
 #NightOutBuilder {
-  padding-bottom: 10vh;
+  margin-bottom: 5vh;
 }
