--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -33,7 +33,7 @@ nav .logo {
 }
 
 #NightOutBuilder {
-  padding-bottom: 10vh;
+  margin-bottom: 5vh;
 }
 
 #Intro .title-section {
@@ -88,8 +88,6 @@ nav .logo {
   display: inline-block;
   width: 100%;
   height: 100vh;
-  margin-bottom: 5vh;
-  background-color: darkgrey;
   text-align: center;
   scroll-snap-align: start;
 }
